# cmake_learn

./: README.md
mycmake/: CMakeLists.txt  main.cpp
mycmake/include/: library1.h  library2.h
mycmake/src/: library1.cpp  library2.cpp
